--- a/modules/DateDayTimeYear/widgets/css/Clock.css
+++ b/modules/DateDayTimeYear/widgets/css/Clock.css
@@ -1,6 +1,6 @@
 .DateDayTimeYear .clock {
 	font-family: 'digital-7_mono', Arial, sans-serif;
-	font-size: 2.5em;
+	font-size: 2.3em;
     text-align: center;
 	margin-top: 10px;
 }
