--- a/modules/DateDayTimeYear/widgets/css/common.css
+++ b/modules/DateDayTimeYear/widgets/css/common.css
@@ -9,9 +9,10 @@
 .DateDayTimeYear {
 	width: 100%;
 	height: 100%;
-	padding: 5px;
 	background-color: #964b4b;
 	color: #d1d1d1;
+	padding: 5px;
+	box-sizing: border-box;
 }
 
 .DateDayTimeYear .icon {
